@@ -1,3 +1,0 @@
-MD5 5adea655ede72738e65de00cd3c21b72 dnrd-2.20.tar.gz 157772
-RMD160 fe834c5544d0499f181c3ff6c257473be06a0674 dnrd-2.20.tar.gz 157772
-SHA256 eaf4afb3b3ae3dcf6960fce6850b5580b86e8e5fdf5c77362cbe37250c1988c6 dnrd-2.20.tar.gz 157772
