@@ -1,3 +1,0 @@
-MD5 cbd3657617ecb92e0fd19c5c9f1ccfd7 dnrd-2.20.1.tar.gz 157804
-RMD160 10baaa8ea78a0f2207c553c33c65167c030a1ad2 dnrd-2.20.1.tar.gz 157804
-SHA256 698acae5a0de7e6694dec441d63dbf68d1c9b83c6f43b1b086da11d270ffd40e dnrd-2.20.1.tar.gz 157804
