@@ -1,0 +1,3 @@
+MD5 41c9b070aae8ed403fc8c2aac7ab157c dnrd-2.20.3.tar.gz 161887
+RMD160 e7cfc6b754d5497bfd835ca7dcf9d8135140f372 dnrd-2.20.3.tar.gz 161887
+SHA256 aa46e7f8736b88c1d752cf606b3990041221ce91d014e955c6b02eb2167db015 dnrd-2.20.3.tar.gz 161887
