@@ -2,6 +2,13 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>no-herd</herd>
+<maintainer>
+	<email>natanael.copa@gmail.com</email>
+	<name>Natanael Copa</name>
+</maintainer>
+<maintainer>
+	<email>armin76@gentoo.org</email>
+</maintainer>
 <longdescription>
 Domain Name Relay Daemon is a caching, forwarding DNS proxy server. Most useful on vpn or dialup firewalls but it is also a nice DNS cache for minor networks and workstations.
 </longdescription>
