@@ -1,6 +1,13 @@
 # ChangeLog for net-dns/dnrd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnrd/ChangeLog,v 1.12 2007/02/22 02:00:58 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnrd/ChangeLog,v 1.13 2007/03/22 12:52:32 armin76 Exp $
+
+*dnrd-2.20.3 (22 Mar 2007)
+
+  22 Mar 2007; Raúl Porcel <armin76@gentoo.org> metadata.xml,
+  -dnrd-2.20.ebuild, -dnrd-2.20.1.ebuild, +dnrd-2.20.3.ebuild:
+  Version bump, bug 170742, remove old, add myself to metadata for
+  proxy-maintain with Natanael Copa
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
